[project]
name = "airbot"
version = "1.0.0"
dependencies = [
    "grpcio",
    "grpcio-tools",
    "pyyaml",
    "importlib_resources",
    "psutil",
    "scipy",
]

[project.optional-dependencies]
server = [
    "torch",
    "torchvision",
    "transformers[torch]",
    "sentencepiece",
    "accelerate",
    "tiktoken",
    "openai",
    "opencv-python",
    "pycocotools",
    "matplotlib",
    "onnxruntime",
    "onnx",
    "numpy",
#    "groundingdino@git+https://github.com/IDEA-Research/GroundingDINO.git",
    "segment_anything@git+https://github.com/facebookresearch/segment-anything.git",
    "graspnetAPI@git+https://github.com/graspnet/graspnetAPI.git"

]
dev = [
    "pytest",
    "isort",
    "yapf",
    "empy"
]

ros = [
    "rosdep"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "google"
line_length = 120

[tool.yapf]
based_on_style = "google"
column_limit = 120
indent_width = 4

[tool.pytest.ini_options]
# Directories that are not visited by pytest collector:
norecursedirs = [
  "*.egg",
  ".eggs",
  "dist",
  "thirdparty"
]
